Stop scrollbar from repositioning page

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+body {
+  width: calc(100vw - 34px);
+}
 currentPage {
   width: 800px;
   background-color: white;
